# snag

./: .release.env  Cargo.toml  README.md  snag.example.yaml
.github/workflows/: release.yml
Formula/: snag.rb
scripts/: render-formula.py
src/: main.rs
src/config/: mod.rs
src/scm/: mod.rs
