[package]
name = "snag"
version = "0.1.0"
edition = "2021"

[dependencies]
gix = "0.69.1"
clap = { version = "4.5.23", features = ["derive"] }
bstr = "1.11.1"
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
octocrab = "0.42.1"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.22"
env_logger = "0.11.6"
